change channels' destination name to player

--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -3,8 +3,8 @@ spring:
     stream:
       bindings:
         producer:
-          destination: greetings
-          group: myGroup
+          destination: player
+          group: NBA
 
 
 server:
